# LauzHack_SBB_Ticketing_System

./: CMakeLists.txt  CmakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSPECTOR_USAGE.md  README.md  TICKET_OWNERSHIP_USAGE.md  definitions.h  main.cpp  setup.sh
Core/: CMakeLists.txt  CmakeLists.txt
Core/priv/: PgpKeyManager.cpp
Core/pub/: PgpKeyManager.h  pgpGenerator.cpp  pgpGenerator.h
Gui/: CMakeLists.txt  CmakeLists.txt
Gui/priv/: accountInfo.cpp  bookingReference.cpp  companyInfo.cpp  identificationToken.cpp  locationSelection.cpp  logInPage.cpp  navBar.cpp  qrCodeGen.cpp  style.cpp  ticketInfo.cpp  ticketInspector.cpp  ticketOwnership.cpp  topBar.cpp  window.cpp
Gui/pub/: accountInfo.h  bookingReference.h  companyInfo.h  identificationToken.h  locationSelection.h  logInPage.h  navBar.h  qrCodeGen.h  style.h  ticketInfo.h  ticketInspector.h  ticketOwnership.h  topBar.h  window.h
